# dustdata

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: rust.yml
.github/workflows/: ci.yml  rust.yml
.hooky/: pre-commit
src/: build.rs  cache.rs  config.rs  dustdata.rs  error.rs  lib.rs
src/bloom/: mod.rs
src/collection/: mod.rs  storage.rs  wal.rs
src/snapshots/: mod.rs
src/storage/: mod.rs
src/storage/lsm/: error.rs  mod.rs  sstable.rs  writer.rs
src/storage/lsm/filter/: mod.rs
src/storage/lsm/index/: mod.rs
src/storage/lsm/logging/: mod.rs
src/storage/lsm/logs/: mod.rs
src/storage/lsm/memtable/: mod.rs
src/storage/lsm/snapshots/: mod.rs
src/utils/: mod.rs
tests/: collection_tests.rs
