[package]
name = "dustdata"
version = "1.3.2"
edition = "2021"
description = "A data concurrency control storage engine to Rustbase"
repository = "https://github.com/rustbase/dustdata"
homepage = "https://github.com/rustbase/dustdata"
authors = ["Rustbase"]
license = "MIT"
exclude = [
    "test_data/*",
    "README.md",
    "CONTRIBUTING.md",
    ".editorconfig",
]


[dependencies]
bson = "2.6.1"
hex = "0.4.3"
lz4 = "1.24.0"
farmhash = "1.1.5"
bitvec = "1.0.1"
serde = {version = "1.0.148", features = ["derive"]}
chrono = "0.4.23"
fs2 = "0.4.3"