[package]
name = "dustdata"
version = "2.0.0-beta.1"
edition = "2021"
description = "A data concurrency control storage engine to Rustbase"
repository = "https://github.com/rustbase/dustdata"
homepage = "https://github.com/rustbase/dustdata"
authors = ["Rustbase"]
license = "MIT"
exclude = ["test_data/*", "README.md", "CONTRIBUTING.md", ".editorconfig"]


[dependencies]
bson = "2.9.0"
lz4 = "1.24.0"
farmhash = "1.1.5"
bitvec = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }
fs2 = "0.4.3"
bincode = "1.3.3"
